force-app/main/default/objects/Process_Overview_Configuration__c/Process_Overview_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for the process overview page</description>
    <label>Process Overview Configuration</label>
</CustomObject>