force-app/main/default/objects/Process_Overview_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show this entry on the display page</description>
    <inlineHelpText>Show this entry on the display page</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>