force-app/main/default/objects/Process_Overview_Configuration__c/fields/Custom_Label_Key__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label_Key__c</fullName>
    <description>Key to lookup the custom label.</description>
    <inlineHelpText>Key to lookup the custom label.</inlineHelpText>
    <label>Custom Label Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>