force-app/main/default/objects/Process_Overview_Configuration__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Controls the display order on the page, starting at top, vertical position.</description>
    <inlineHelpText>Controls the display order on the page, starting at top, vertical position.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>