force-app/main/default/objects/Process_Overview_Configuration__c/fields/IconImageName__c.field-meta.xml
<CustomField>
    <fullName>IconImageName__c</fullName>
    <description>This is the name of the resource image in the icon resource bundle.</description>
    <inlineHelpText>This is the name of the resource image in the icon resource bundle. It should look like
[ResourceName].[IconName] (without the brackets...)</inlineHelpText>
    <label>IconImageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>