force-app/main/default/objects/Process_Overview_Configuration__c/fields/IconStyleClass__c.field-meta.xml
<CustomField>
    <fullName>IconStyleClass__c</fullName>
    <description>This holds the style class name for the icon used in the layout page</description>
    <inlineHelpText>This holds the style class name for the icon used in the layout page</inlineHelpText>
    <label>IconStyleClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>