force-app/main/default/objects/Process_Overview_Configuration__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <description>This holds the configuration URL link. The user will be taken to this end point when the link is clicked</description>
    <inlineHelpText>Enter the fully qualified Link URL in this field.</inlineHelpText>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>