force-app/main/default/objects/Process_Overview_Configuration__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>This is the name of the loan processing stage. It must match exactly the stage name used in the stage picklist on the loan object.</description>
    <inlineHelpText>This is the name of the loan processing stage. It must match exactly the stage name used in the stage picklist on the loan object.</inlineHelpText>
    <label>Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>