force-app/main/default/objects/Process_Overview_Configuration__c/fields/StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>StaticResourceName__c</fullName>
    <description>Contains the name of the static resource where the icons are packaged</description>
    <inlineHelpText>Contains the name of the static resource where the icons are packaged</inlineHelpText>
    <label>StaticResourceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>